Add documentation for new movie search route
